# DataEngine

./: CMakeLists.txt  DataEngine.cpp  DataEngine.h  IDataEngine.h  README.md  build.sh
Include/BaseInc/Authentication/: Authentication.h  AuthenticationRpc.h
Include/BaseInc/Channel/: IHandleMessage.h
Include/BaseInc/Channel/Net/: TcpClient.h  TcpServer.h  Udp.h
Include/BaseInc/Channel/Serial/: Serial.h
Include/BaseInc/Component/: ComponentMacroDef.h  ComponentManager.h  IUnknown.h
Include/BaseInc/Config/: ConfigManager.h  ConfigManagerRpc.h
Include/BaseInc/Console/: Console.h  ConsoleRpc.h
Include/BaseInc/Data/: ValueWrap.h
Include/BaseInc/Event/: EventManager.h  IEventManager.h
Include/BaseInc/Export/: Export.h
Include/BaseInc/Jsonrpc/: IRpcServer.h  RpcReg.h  RpcServer.h
Include/BaseInc/Log/: Log.h  NetLog.h
Include/BaseInc/Mutex/: MutexRW.h
Include/BaseInc/Print/: OSFuncDef.h  Print.h
Include/BaseInc/Runtime/: Runtime.h
Include/BaseInc/Semaphore/: Semaphore.h
Include/BaseInc/SingTon/: SingTon.h
Include/BaseInc/Task/: TaskManager.h
Include/BaseInc/Thread/: Thread.h  ThreadManager.h
Include/BaseInc/Time/: Time.h
Include/BaseInc/Timer/: Timer.h  TimerManager.h
Include/BaseInc/Traits/: Traits.h
Include/BusinessInc/DataEngine/: IChannel.h  IProtocol.h
Include/ThirdInc/: lws_config.h
Include/ThirdInc/jsonrpccpp/: version.h
Include/ThirdInc/jsonrpccpp/common/: procedure.h
Include/ThirdInc/libexif/: exif-tag.h
Lib/ThirdLib/aarch64/: libargtable2.la  libargtable2.so.0.1.8  libcrypto.so.1.0.0  libcurl.la  libcurl.so.4.5.0  libgdcmMSFF.so.2.8  libhiredis.so.0.14  libjsonrpccpp-client.so.1  libjsonrpccpp-client.so.1.2.0  libjsonrpccpp-common.so.1  libjsonrpccpp-common.so.1.2.0  libjsonrpccpp-server.so.1  libjsonrpccpp-server.so.1.2.0  libliveMedia.so.58  libliveMedia.so.58.2.0  libmicrohttpd.la  libmicrohttpd.so.12.52.0  libpaho-mqtt3a.so.1.3.8  libpaho-mqtt3c.so.1  libpostproc.so.55.3.100  librockchip_mpp.so.0  libsqlite3.la  libssh-gcrypt_threads.so.4.5.0  libssl.so.1.0.0
Lib/ThirdLib/x86/: libiconv.so.2  libjsonrpccpp-client.so.1  libjsonrpccpp-client.so.1.3.0  libjsonrpccpp-common.so.1  libjsonrpccpp-common.so.1.3.0  libjsonrpccpp-server.so.1  libjsonrpccpp-server.so.1.3.0  libpaho-mqtt3a.so.1  libpaho-mqtt3c.so.1.3.8
Plug/: CMakeLists.txt
Plug/CollModbus/: CMakeLists.txt  CollModbus.cpp  CollModbus.h
Plug/IEC104/: CMakeLists.txt
Plug/IEC104/TransIEC104/: CMakeLists.txt  TransIEC104.cpp  TransIEC104.h
Run/: License.reg
Run/DataEngine/: Composite.json  SerialType.json
Run/DataEngine/DevStore/温湿度/: PointTable.json  Protocol.json
Run/DataEngine/DevStore/空调/: PointTable.json  Protocol.json
Run/DataEngine/TaskCfg/: Task1.json  Task2.json  Task3.json
Run/DataEngine/Template/Attribute/: Common.json
Run/DataEngine/Template/Channel/: RS-485.json  TCPClient.json  TCPServer.json
Run/DataEngine/Template/PointTable/: MmsServer.json  Modbus采集.json  TransTable.json
Run/DataEngine/Template/Protocol/: IEC104转发.json  Modbus采集.json
Run/DataEngine/TransStore/test104Srv/: PointTable.json  Protocol.json
Run/aarch64/: Main
Run/config/: component.json
Run/config/PncRun/: PncRun.json
Run/config/log/: log.json
Run/config/mmslite/: mmslite.json
Run/config/mmslite/client/: logcfg.xml
Run/config/mmslite/server/: logcfg.xml  model.icd
Run/default/: configCfg.json
Run/default/PncRun/: Filter.json
Run/default/backend/: mqtt.json
Run/default/log/: log.json
Run/default/mmslite/client/: osicfg.xml
Run/default/mmslite/server/: startup.cfg
Run/default/rpc/: rpc.json
Run/x86/: Main
Src/Channel/: ChannelManager.cpp  ChannelManager.h  IChannel.cpp  IChannel.h  RS485Channel.cpp  RS485Channel.h  TCPClientChannel.cpp  TCPClientChannel.h  TCPServerChannel.cpp  TCPServerChannel.h  UDPChannel.cpp  UDPChannel.h
Src/Config/: ConfigParse.cpp  ConfigParse.h
Src/Data/: DataStorage.cpp  DataStorage.h
Src/Log/: Log.cpp  Log.h  LogManager.cpp  LogManager.h
Src/Protocol/: IProtocol.cpp  ProtocolManager.cpp  ProtocolManager.h
Src/Task/: TaskCenter.cpp  TaskCenter.h
Src/Tool/: ExpParser.cpp  ExpParser.h  Tool.cpp  Tool.h
